--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=166,217
-Size=203,73
+Pos=210,125
+Size=432,146
+Collapsed=0
+
+[Window][Camera]
+Pos=71,34
+Size=481,131
 Collapsed=0
 
